Feat: HEADER and a div with class name container

--- a/burguer.html
+++ b/burguer.html
@@ -8,5 +8,12 @@
 </head>
 <body>
 
+    <!--HEADER-->
+    <header>
+        <div class="container">
+            
+        </div>
+    </header>
+
 </body>
 </html>
