--- a/burguer.html
+++ b/burguer.html
@@ -11,7 +11,9 @@
     <!--HEADER-->
     <header>
         <div class="container">
-            
+            <div class="logo">
+                
+            </div>
         </div>
     </header>
 
