--- a/burguer.html
+++ b/burguer.html
@@ -12,8 +12,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                
             </div>
+            <a href="">B7 <span>•</span> Burguer</a>
         </div>
     </header>
 
