Feat: LOGO part in header page

--- a/burguer.html
+++ b/burguer.html
@@ -11,6 +11,7 @@
     <!--HEADER-->
     <header>
         <div class="container">
+            <!--LOGO part in header page-->
             <div class="logo">
                 <a href="">B7 <span>•</span> Burguer</a>
             </div>
