--- a/burguer.html
+++ b/burguer.html
@@ -15,6 +15,10 @@
             <div class="logo">
                 <a href="">B7 <span>•</span> Burguer</a>
             </div>
+            <!--MENU-->
+            <nav>
+                
+            </nav>
         </div>
     </header>
 
