Feat: menu topics

--- a/burguer.html
+++ b/burguer.html
@@ -17,7 +17,11 @@
             </div>
             <!--MENU-->
             <nav>
-                
+                <ul>
+                    <li><a href="">Inicio</a></li>
+                    <li><a href="">Burguers</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
             </nav>
         </div>
     </header>
