Feat: div (rightside) - BUTTON for take orders

--- a/burguer.html
+++ b/burguer.html
@@ -22,6 +22,10 @@
                     <li><a href="">Burguers</a></li>
                     <li><a href="">Contato</a></li>
                 </ul>
+                <!--BUTTON for take orders-->
+                <div class="rightside">
+
+                </div>
             </nav>
         </div>
     </header>
