Feat: add class in link button

--- a/burguer.html
+++ b/burguer.html
@@ -24,7 +24,7 @@
                 </ul>
                 <!--BUTTON for take orders-->
                 <div class="rightside">
-
+                    <a href="" class="button">Fazer Pedido</a>
                 </div>
             </nav>
         </div>
