Feat/Style: Add class in UL -> Leftside

--- a/burguer.html
+++ b/burguer.html
@@ -17,7 +17,7 @@
             </div>
             <!--MENU-->
             <nav>
-                <ul>
+                <ul class="leftside">
                     <li><a href="">Inicio</a></li>
                     <li><a href="">Burguers</a></li>
                     <li><a href="">Contato</a></li>
