Feat/Style: div menu icon and style in topics/button

--- a/burguer.html
+++ b/burguer.html
@@ -27,6 +27,15 @@
                     <a href="" class="button">Fazer Pedido</a>
                 </div>
             </nav>
+
+            <!--Menu It will only appear with responsiveness-->
+            <div class="menu">
+                <div class="menu-icon">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
         </div>
     </header>
 
