Feat: divs for Leftside and Rightside

--- a/burguer.html
+++ b/burguer.html
@@ -42,7 +42,14 @@
 
     <!--HERO-->
     <section class="hero">
-        
+        <div class="container">
+            <div class="leftside">
+                ...
+            </div>
+            <div class="rightside">
+                ...
+            </div>
+        </div>
     </section>
 
 </body>
