--- a/burguer.html
+++ b/burguer.html
@@ -44,7 +44,7 @@
     <section class="hero">
         <div class="container">
             <div class="leftside">
-                ...
+                <h1>O Hamburguer mais delicioso.😋</h1>
             </div>
             <div class="rightside">
                 ...
