Feat: P for text

--- a/burguer.html
+++ b/burguer.html
@@ -45,6 +45,7 @@
         <div class="container">
             <div class="leftside">
                 <h1>O Hamburguer mais delicioso.😋</h1>
+                <p>A primeira hamburgueria virtual que você faz o pedido online e come o burguer através do computador.</p>
             </div>
             <div class="rightside">
                 ...
