--- a/burguer.html
+++ b/burguer.html
@@ -46,6 +46,7 @@
             <div class="leftside">
                 <h1>O Hamburguer mais delicioso.😋</h1>
                 <p>A primeira hamburgueria virtual que você faz o pedido online e come o burguer através do computador.</p>
+                <a href="" class="button">Fazer Pedido</a>
             </div>
             <div class="rightside">
                 ...
