Feat: burguer image

--- a/burguer.html
+++ b/burguer.html
@@ -46,10 +46,11 @@
             <div class="leftside">
                 <h1>O Hamburguer mais delicioso.😋</h1>
                 <p>A primeira hamburgueria virtual que você faz o pedido online e come o burguer através do computador.</p>
+                <!--Button for take orders-->
                 <a href="" class="button">Fazer Pedido</a>
             </div>
             <div class="rightside">
-                ...
+                <img src="images/heroBurger.png" alt="Burguer">
             </div>
         </div>
     </section>
