Feat: Section SEARCH

--- a/burguer.html
+++ b/burguer.html
@@ -50,9 +50,14 @@
                 <a href="" class="button">Fazer Pedido</a>
             </div>
             <div class="rightside">
-                <img src="images/heroBurger.png" alt="Burguer">
+                <img src="images/heroBurger.png" alt="Burguer gigante">
             </div>
         </div>
+    </section>
+
+    <!--SEARCH-->
+    <section class="search">
+        
     </section>
 
 </body>
