Feat: div for container

--- a/burguer.html
+++ b/burguer.html
@@ -57,7 +57,9 @@
 
     <!--SEARCH-->
     <section class="search">
-        
+        <div class="container">
+            
+        </div>
     </section>
 
 </body>
