Feat: Section title

--- a/burguer.html
+++ b/burguer.html
@@ -58,7 +58,8 @@
     <!--SEARCH-->
     <section class="search">
         <div class="container">
-            
+            <!--TITLE-->
+            <div class="section-title">Pesquise o seu <br> Hamburguer favorito.</div>
         </div>
     </section>
 
