Feat: Rightside and Leftside

--- a/burguer.html
+++ b/burguer.html
@@ -60,6 +60,11 @@
         <div class="container">
             <!--TITLE-->
             <div class="section-title">Pesquise o seu <br> Hamburguer favorito.</div>
+
+            <div class="search-sides">
+                <div class="leftside">...</div>
+                <div class="rightside">...</div>
+            </div>
         </div>
     </section>
 
