Feat: input type -> Search and placeholder

--- a/burguer.html
+++ b/burguer.html
@@ -62,7 +62,9 @@
             <div class="section-title">Pesquise o seu <br> Hamburguer favorito.</div>
 
             <div class="search-sides">
-                <div class="leftside">...</div>
+                <div class="leftside">
+                    <input type="search" placeholder="Digite o nome do Burguer">
+                </div>
                 <div class="rightside">...</div>
             </div>
         </div>
