Feat: select for selection category

--- a/burguer.html
+++ b/burguer.html
@@ -65,7 +65,11 @@
                 <div class="leftside">
                     <input type="search" placeholder="Digite o nome do Burguer">
                 </div>
-                <div class="rightside">...</div>
+                <div class="rightside">
+                    <select name="" id="">
+                        <option value="" hidden>Selecionar Categoria</option>
+                    </select>
+                </div>
             </div>
         </div>
     </section>
