--- a/burguer.html
+++ b/burguer.html
@@ -66,8 +66,13 @@
                     <input type="search" placeholder="Digite o nome do Burguer">
                 </div>
                 <div class="rightside">
-                    <select name="" id="">
+                    <select>
+                        <!--OPTIONS-->
                         <option value="" hidden>Selecionar Categoria</option>
+                        <option value="burgers">Burgers</option>
+                        <option value="pizza">Pizza</option>
+                        <option value="vegetariano">Vegetariano</option>
+                        <option value="kids">Kids</option>
                     </select>
                 </div>
             </div>
