--- a/burguer.html
+++ b/burguer.html
@@ -59,9 +59,9 @@
     <section class="search">
         <div class="container">
             <!--TITLE-->
-            <div class="section-title">Pesquise o seu <br> Hamburguer favorito.</div>
+            <div class="title">Pesquise o seu <br> Hamburguer favorito.</div>
 
-            <div class="search-sides">
+            <div class="sides">
                 <div class="leftside">
                     <input type="search" placeholder="Digite o nome do Burguer">
                 </div>
