Feat: div --> Warning

--- a/burguer.html
+++ b/burguer.html
@@ -86,7 +86,7 @@
             <!--PRODUCTS (Burgers)-->
             <div class="products-grid">
                 <a href="" class="product-item">
-                    
+                    <div class="warning">Promoção</div>
                 </a>
             </div>
         </div>
