Feat: div for Photo

--- a/burguer.html
+++ b/burguer.html
@@ -87,6 +87,9 @@
             <div class="products-grid">
                 <a href="" class="product-item">
                     <div class="warning">Promoção</div>
+                    <div class="photo">
+                        <img src="../Burguer/images/burgers/burger1.png" alt="First Burger">
+                    </div>
                 </a>
             </div>
         </div>
