--- a/burguer.html
+++ b/burguer.html
@@ -90,6 +90,11 @@
                     <div class="photo">
                         <img src="../Burguer/images/burgers/burger1.png" alt="First Burger">
                     </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
                 </a>
             </div>
         </div>
