Feat: add 6 parts about burgers

--- a/burguer.html
+++ b/burguer.html
@@ -88,7 +88,67 @@
                 <a href="" class="product-item">
                     <div class="warning">Promoção</div>
                     <div class="photo">
-                        <img src="../Burguer/images/burgers/burger1.png" alt="First Burger">
+                        <img src="images/burgers/burger1.png" alt="First Burger">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <!--TWO-->
+                <a href="" class="product-item">
+                    <div class="warning">Promoção</div>
+                    <div class="photo">
+                        <img src="images/burgers/burger2.png" alt="First Burger">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <!--THREE-->
+                <a href="" class="product-item">
+                    <div class="warning">Promoção</div>
+                    <div class="photo">
+                        <img src="images/burgers/burger3.png" alt="First Burger">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <!--FOUR-->
+                <a href="" class="product-item">
+                    <div class="warning">Promoção</div>
+                    <div class="photo">
+                        <img src="images/burgers/burger4.png" alt="First Burger">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <!--FIVE-->
+                <a href="" class="product-item">
+                    <div class="warning">Promoção</div>
+                    <div class="photo">
+                        <img src="images/burgers/burger2.png" alt="First Burger">
+                    </div>
+                    <div class="info">
+                        <div class="product-category">Tradicional</div>
+                        <div class="product-name">Texas Burger</div>
+                        <div class="product-price">R$ 25,50</div>
+                    </div>
+                </a>
+                <!--SIX-->
+                <a href="" class="product-item">
+                    <div class="warning">Promoção</div>
+                    <div class="photo">
+                        <img src="images/burgers/burger1.png" alt="First Burger">
                     </div>
                     <div class="info">
                         <div class="product-category">Tradicional</div>
