--- a/burguer.html
+++ b/burguer.html
@@ -154,6 +154,14 @@
             </div>
         </div>
     </main>
+
+
+    <!--FOOTER-->
+    <footer>
+        <div class="container">
+            
+        </div>
+    </footer>
     
 </body>
 </html>
