Feat: add link Logo

--- a/burguer.html
+++ b/burguer.html
@@ -159,7 +159,9 @@
     <!--FOOTER-->
     <footer>
         <div class="container">
-            
+            <div class="logo">
+                <a href="">B7 <span>•</span> Burguer</a>
+            </div>
         </div>
     </footer>
     
