--- a/burguer.html
+++ b/burguer.html
@@ -162,7 +162,7 @@
             <div class="logo">
                 <a href="">B7 <span>•</span> Burguer</a>
             </div>
-            <div class="copyrights">Criado por <a href="www.linkedin.com/in/wilson-rafael-melo-312425255">Wilson Rafael</a></div>
+            <div class="copyrights">Criado por <a href="https://www.linkedin.com/in/wilson-rafael-melo-312425255/" target="_blank">Wilson Rafael</a></div>
         </div>
     </footer>
     
